# tbPy

./: .gitignore  README.md  bot.py  config.py  requirements.txt  setup.cfg  setup.py  test.py
api/: __init__.py
bot_events/: __init__.py  clear_message_event.py  command_event.py  connected_event.py  disconnected_event.py  error_event.py  event.py  host_target_event.py  join_event.py  message_event.py  new_event_handler.py  newday_event.py  notice_event.py  part_event.py  ping_event.py  reconnect_event.py  room_state_event.py  shutdown_event.py  startup_event.py  user_notice_event.py  user_state_event.py
chat/: __init__.py  channel.py  command_message.py  message.py  tag.py
commands/: __init__.py  command.py  leave_command.py  test_command.py
enum_types/: __init__.py  event_type.py  user_notice_type.py
examples/: simple_bot.py
net/twitch/: twitch_irc.py  twitch_ws.py
tbPy/api/: __init__.py  twitch_api.py
tbPy/bot/: bot.py
tbPy/chat/: user.py
tbPy/commands/: command.py
tbPy/events/: __init__.py  host_target_event.py  newday_event.py  notice_event.py  user_state_event.py
tbPy/misc/: config.py  util_decorators.py
tbPy/types/: game_type.py  irc_type.py
tbpython/: config.py
tbpython/bot/: bot.py
tbpython/bot_events/: __init__.py  clear_message_event.py  command_event.py  connected_event.py  disconnected_event.py  error_event.py  event.py  host_target_event.py  join_event.py  message_event.py  newday_event.py  notice_event.py  part_event.py  ping_event.py  reconnect_event.py  room_state_event.py  (+4 more)
utils/: __init__.py  stringutils.py
(+41 files in other folders)
