[metadata]
name = tbPy

author = nortoh
author_email = christian@christianhorton.me

version = 1.0

description = A package to create twitch bots
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/nortoh/tbPy


[options]
package_dir =
    = tbPy